# budoux-phf-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: bump-version.yml  release.yml
codegen/: Cargo.toml
codegen/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  model_ja.rs  model_ja_knbc.rs  model_th.rs  model_zh_hans.rs  model_zh_hant.rs  parser.rs
scripts/: build-wasm.sh  release.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
