[package]
name = "budoux-phf-rs"
version = "0.1.7"
edition = "2024"
description = "Rust implementation of BudouX"
license = "Apache-2.0"
repository = "https://github.com/holrock/budoux-phf-rs"
readme = "../README.md"

[dependencies]
phf = { version = "0.14.0", default-features = false }

[features]
default = ["std", "ja", "th", "zh_hans", "zh_hant"]
std = ["alloc"]
alloc = []
ja = []
ja_knbc = []
th = []
zh_hans = []
zh_hant = []
